# pyhabbo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md
examples/public/achievements/: list_all.py  list_for_user.py
examples/public/badge/: get_owners.py
examples/public/groups/: get.py  list_members.py
examples/public/lists/: list_hotlooks.py
examples/public/marketplace/: batch_stats.py  room_items_only.py  wall_items_only.py
examples/public/ping/: ping.py
examples/public/rooms/: get.py  get_from_user.py
examples/public/users/: get_by_id.py  get_by_name.py  get_profile.py  list_badges.py  list_friends.py  list_groups.py  list_rooms.py
scripts/: format_fixtures.sh
src/pyhabbo/: __init__.py  _http.py  client.py  exceptions.py  hotels.py
src/pyhabbo/models/: achievement.py  badge.py  group.py  hotlooks.py  marketplace.py  room.py  user.py
src/pyhabbo/resources/: achievements.py  badges.py  base.py  groups.py  lists.py  marketplace.py  rooms.py  users.py
tests/: conftest.py  test_achievements.py  test_badges.py  test_exceptions.py  test_groups.py  test_hotels.py  test_http.py  test_lists.py  test_marketplace.py  test_rooms.py  test_users.py
tests/fixtures/: achievements_all.json  achievements_user.json  badge_owners.json  group.json  group_members.json  hotlooks.xml  marketplace_batch.json  room.json  user_badges.json  user_by_id.json  user_by_name.json  user_friends.json  user_groups.json  user_profile.json  user_rooms.json
