[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhabbo"
version = "0.1.0"
description = "Python SDK for the Habbo public Web API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyhabbo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
