[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhabbo"
authors = [{ name = "0xChron", email = "capcanillas@gmail.com" }]
dynamic = ["version"]
description = "Unofficial Python SDK for the Habbo public Web API"
readme = "README.md"
license = "MIT"
keywords = ["habbo", "habbohotel", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/0xChron/pyhabbo"
Repository = "https://github.com/0xChron/pyhabbo"
Issues = "https://github.com/0xChron/pyhabbo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyhabbo"]

[tool.hatch.version]
path = "src/pyhabbo/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]